force-app/main/default/objects/SM_QuestionSet__c/SM_QuestionSet__c.object-meta.xml
<CustomObject>
    <description>Custom question set definition for P2P or P2C</description>
    <label>Question Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>