force-app/main/default/objects/SM_QuestionSet__c/fields/AutoMatch__c.field-meta.xml
<CustomField>
    <fullName>AutoMatch__c</fullName>
    <label>Auto-Match</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>