force-app/main/default/objects/SM_QuestionSet__c/fields/DisabledTools__c.field-meta.xml
<CustomField>
    <fullName>DisabledTools__c</fullName>
    <label>Disabled Tools</label>
    <length>60</length>
    <type>Text</type>
</CustomField>