force-app/main/default/objects/SM_QuestionSet__c/fields/HelpZipDomainName__c.field-meta.xml
<CustomField>
    <fullName>HelpZipDomainName__c</fullName>
    <label>Help Zip Domain Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>