force-app/main/default/objects/SM_QuestionSet__c/fields/HelpZipLanguages__c.field-meta.xml
<CustomField>
    <fullName>HelpZipLanguages__c</fullName>
    <inlineHelpText>Translations supported in the zip file, specified by name and separated by commas. Such as “en,en-US,fr”</inlineHelpText>
    <label>Help Zip Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>