force-app/main/default/objects/SM_QuestionSet__c/fields/HelpZipStaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>HelpZipStaticResourceName__c</fullName>
    <label>Help Zip Static Resource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>