force-app/main/default/objects/SM_QuestionSet__c/fields/InUse__c.field-meta.xml
<CustomField>
    <fullName>InUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Use</label>
    <type>Checkbox</type>
</CustomField>