force-app/main/default/objects/SM_QuestionSet__c/fields/OCPCustomisations__c.field-meta.xml
<CustomField>
    <fullName>OCPCustomisations__c</fullName>
    <label>OCP Customisations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>