force-app/main/default/objects/SM_QuestionSet__c/fields/OverviewQuestionWidth__c.field-meta.xml
<CustomField>
    <fullName>OverviewQuestionWidth__c</fullName>
    <defaultValue>239</defaultValue>
    <label>Overview Question Width</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>