force-app/main/default/objects/SM_QuestionSet__c/fields/P2P__c.field-meta.xml
<CustomField>
    <fullName>P2P__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2P</label>
    <type>Checkbox</type>
</CustomField>