force-app/main/default/objects/SM_QuestionSet__c/fields/SalesStages__c.field-meta.xml
<CustomField>
    <fullName>SalesStages__c</fullName>
    <inlineHelpText>A comma separated list of stage names that make up the stages of sale for opportunities. The stages are stored in ordered sequence.</inlineHelpText>
    <label>Sales Stages</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>