force-app/main/default/objects/SM_QuestionSet__c/fields/StandardSet__c.field-meta.xml
<CustomField>
    <fullName>StandardSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StandardSet</label>
    <type>Checkbox</type>
</CustomField>