force-app/main/default/objects/SM_QuestionSet__c/fields/ToolIntegration__c.field-meta.xml
<CustomField>
    <fullName>ToolIntegration__c</fullName>
    <label>Tool Integration</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>